# matid

./: .gitignore  .gitlab-ci.yml  .travis.yml  MANIFEST.in  README.md  devrequirements.txt  doc.sh  index.rst  pyproject.toml  requirements.txt  setup.py  todo.md
docs/: .buildinfo  about.html  about.rst  buildstabledocs.sh  conf.py  documentation.rst  genindex.html  index.html  index.rst  install.html  install.rst  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: bcc100_imperfect.py  bcc100_molecule_adsoption.py  bcc100_perfect.py  classification1.py  classification2.py  dimensionality.py  structure.xyz  summary.py  surface.py  symmetry.py
matid/: __init__.py  classifications.py  exceptions.py  geometry.py
regtests/: Ba20O52Ti20.json  C2Ba16O44Zr12.json  C2H4Ru36.json  P1re6oFZ3KTCcl9CID_P1lu00yN5I.json  P6ify4HgqDkkettDovKwl7_A9emhy.json  P7c9ib9yQyrNzliLfu6cO1s7wG0xk.json  PSX9X4dQR2r1cjQ9kBtuC-wI6MO8B.json  PfrTS8BAE6FqNYL9yGJ8H77C4xzYa.json  PgFB5vtxkTyEJ3oUZ0ylWn0A-z8ke.json  Pje1-YdvEDusyBIStylnee37oeiPW.json  Pm1yla_i8HghYOCx4zYghsccncpYb.json  PnG-oRNfRLg1L4Veolbdbqr16SAZT.json  Pt08E8pJfZPLEzeiCLDIf7lyNv9lX.json  Pwf1I3LmgToiTGVzGWuPGMsk8qhG2.json  classificationtests.py  coverage.sh  geometrytests.py  mat2d_4.json  mat2d_adsorbate_unknown.json  regtests.py  runtests.sh  surfacetests.py  symmetrytests.py  testrunner.py  tests.py
systax/: __init__.py  bulkdetection.py  cellnormalizer.py  classifications.py  classifier.py  components.py  exceptions.py  geometry.py  material3danalyzer.py  symmetry.py
tests/: classificationtests.py  (+4 more)
(+1441 files in other folders)
